# Helios

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  FILETREE.md  INDEX.md  LICENSE-SHARING.md  Makefile  README.md  SOURCES.md
.codex/: config.toml
.codex/agents/: adapter-runtime-engineer.toml  gemma4-correctness-reviewer.toml  mlx-ffi-engineer.toml  mtp-kv-engineer.toml  tui-ux-engineer.toml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/prompts/: M04-corpus.tsv  README.md
codex/: INSTALL.md
codex/goals/: 00-main-goal.md  GOAL-TEMPLATE.md  M00-repo-bootstrap.goal.md  M01-native-mlx-loader.goal.md  M02-gemma4-tokenizer-chat-config.goal.md  M03-greedy-text-inference.goal.md  M04-reference-parity-harness.goal.md  M05-tui-operator-console.goal.md  M06-mtp-speculative-decoding.goal.md  M07-kv-cache-core.goal.md  M08-ssd-prefix-cache.goal.md  M09-kv-compression-research.goal.md  M10-dynamic-adapters.goal.md  M11-openai-server.goal.md  M12-tiny16-profiling-release.goal.md  P00-performance-baseline.goal.md  P01-persistent-helper-session.goal.md  P02-real-server-inference-path.goal.md  P03-native-graph-triage.goal.md  P04-incremental-native-kv.goal.md  P05-native-mtp.goal.md  P06-real-ram-prefix-cache.goal.md  P07-real-ssd-prefix-cache.goal.md  P08-kv-compression.goal.md  P09-real-lora-adapter-hot-path.goal.md  XR00-real-workload-corpus.goal.md  XR01-real-context-ab-harness.goal.md  XR02-native-helper-real-context-ab.goal.md  XR03-mtp-real-context-diagnosis.goal.md  XR05-prefill-and-eval-scheduling-ab.goal.md  XR06-native-decode-tail-latency-ab.goal.md  XR07-prefix-cache-real-reuse-ab.goal.md  XR08-ssd-cache-policy-variance.goal.md  XR09-kv-compression-real-quality-ab.goal.md  XR11-persistent-native-server-ab.goal.md  XR13-novel-metal-kv-exploration.goal.md  XR14-mtp-policy-autotune.goal.md  XR15-mtp-policy-variance-ab.goal.md  XR16-mtp-overhead-optimization.goal.md  XR17-mtp-final-projection-skip.goal.md  (+67 more)
codex/prompts/: bootstrap.md  milestone-runbook.md  review-loop.md  subagent-orchestration.md  tui-ux-review.md
crates/gemma4d-adapters/: Cargo.toml
crates/gemma4d-adapters/examples/: m10_adapter_fixture.rs
crates/gemma4d-adapters/src/: lib.rs
crates/gemma4d-bench/: Cargo.toml
crates/gemma4d-bench/examples/: dspark_fixed_block_matrix.rs  m12_real_tiny16_matrix.rs  m12_release_gate.rs  p00_performance_baseline.rs  p01_persistent_helper_session.rs  p02_real_server_inference.rs  p03_native_graph_triage.rs  p04_incremental_native_kv.rs  p05_native_mtp.rs  p06_real_ram_prefix_cache.rs  p07_real_ssd_prefix_cache.rs  p08_kv_compression.rs  p09_real_lora_adapter.rs  p10_tui_live_console.rs  xr01_real_context_ab.rs  xr02_native_helper_real_context_ab.rs  xr03_mtp_real_context_diagnosis.rs  xr05_prefill_eval_scheduling_ab.rs  xr06_native_decode_tail_latency_ab.rs  xr07_prefix_cache_real_reuse_ab.rs  xr08_ssd_cache_policy_variance.rs  xr09_kv_compression_real_quality_ab.rs  xr11_persistent_native_server_ab.rs  xr13_novel_metal_kv_exploration.rs  xr14_mtp_policy_autotune.rs  xr15_mtp_policy_variance_ab.rs  xr21_native_block_decode_microbench.rs  xr42_rayon_manifest_hashing_ab.rs  xr54_drafter_pytorch_parity.rs
crates/gemma4d-bench/src/: build_provenance.rs  lib.rs  main.rs  manifest.rs  workload_corpus.rs  xr_ab.rs
crates/gemma4d-cache/: Cargo.toml
crates/gemma4d-chat/: Cargo.toml
crates/gemma4d-chat/src/: lib.rs
crates/gemma4d-engine/: Cargo.toml
crates/gemma4d-ffi/: Cargo.toml  build.rs
crates/gemma4d-kv/: Cargo.toml
crates/gemma4d-kv/examples/: m07_restore_matrix.rs  m08_ssd_benchmark.rs  m09_compression_eval.rs
crates/gemma4d-kv/src/: lib.rs
crates/gemma4d-llama-baseline/: Cargo.toml
crates/gemma4d-router/: Cargo.toml
crates/gemma4d-sampler/: Cargo.toml
crates/gemma4d-server/: Cargo.toml
crates/gemma4d-server/examples/: m11_server_smoke.rs
crates/gemma4d-server/src/: http.rs  lib.rs  main.rs
crates/gemma4d-tokenizer/: Cargo.toml
crates/gemma4d-tui/: Cargo.toml
crates/gemma4d-tui/src/: app.rs  config.rs  lib.rs  main.rs  provider.rs  terminal.rs  ui.rs
crates/gemma4d-tui/tests/: m05_acceptance.rs
crates/gemma4d-tui/tests/fixtures/: invalid-tiny16.toml
docs/: README.md  xr-ab-methodology.md  xr-current-state-review.md  xr-real-workload-methodology.md
milestones/: M00-repo-bootstrap.md  M01-native-mlx-loader.md  M02-gemma4-tokenizer-chat-config.md  M03-greedy-text-inference.md  M04-reference-parity-harness.md  M05-tui-operator-console.md  M06-mtp-speculative-decoding.md  M07-kv-cache-core.md  M08-ssd-prefix-cache.md  M09-kv-compression-research.md  M10-dynamic-adapters.md  M11-openai-server.md  M12-tiny16-profiling-release.md  milestone-index.md
native/gemma4_mlx/: CMakeLists.txt  README.md
native/gemma4_mlx/include/: gemma4_mlx.h
native/gemma4_mlx/scripts/: gemma4d_compare_layer0_dumps.py  gemma4d_mlx_lm_helper.py  gemma4d_mlx_lm_trace.py
native/gemma4_mlx/src/: model_manifest.cc  model_manifest.h  native_model.cc  native_model.h  runtime.cc  smoke.cc
references/: acceptance-checklists.md  benchmark-matrix.md  tui-keybindings.md  tui-screen-map.md  uploaded-skills-MANIFEST.json  uploaded-skills-README.md
scripts/: mlx-diagnostics.sh  native-smoke.sh  verify.sh  xr54_dequant_assistant.py  xr54_drafter_pytorch_parity.py  xr55_nblock_report.py  xr57_trace_spotcheck.py  xr61_adaptive_n_policy_search.py  xr61_adaptive_n_report.py  xr67_deferred_kv_eval_report.py  xr68_defer_to_logits_policy_report.py  xr73_scoped_mtp_report.py  xr81_mtp_overhead_report.py  xr82_first_verify_warmup_report.py
spec/: 00-executive-summary.md  01-product-requirements.md  02-architecture.md  03-rust-mlx-ffi-contract.md  04-model-loading-tokenization.md  05-speculative-decoding-mtp.md  06-kv-cache-offload-compression.md  07-dynamic-lora-qlora-adapters.md  08-serving-api-runtime.md  09-observability-profiling.md  10-correctness-evals-benchmarks.md  11-security-licensing-safety.md  12-risk-register.md  13-tui-operator-ux.md
tasks/: backlog.md  dependency-graph.md  measurement-gates.md  task-card-template.md
(+121 files in other folders)
