[workspace]
resolver = "2"
members = [
    "crates/gemma4d-adapters",
    "crates/gemma4d-bench",
    "crates/gemma4d-cache",
    "crates/gemma4d-chat",
    "crates/gemma4d-engine",
    "crates/gemma4d-ffi",
    "crates/gemma4d-kv",
    "crates/gemma4d-llama-baseline",
    "crates/gemma4d-router",
    "crates/gemma4d-sampler",
    "crates/gemma4d-server",
    "crates/gemma4d-tokenizer",
    "crates/gemma4d-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jscott3201/Helios"
