[package]
name = "gemma4d-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"

[dev-dependencies]
gemma4d-kv = { version = "0.1.0", path = "../gemma4d-kv" }
