[package]
name = "gemma4d-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
gemma4d-tokenizer = { version = "0.1.0", path = "../gemma4d-tokenizer" }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
