[package]
name = "gemma4d-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
